@@ -352,7 +352,7 @@ public class TableSorter extends AbstractTableModel {
 			// returns Object. We can't cast an Object to an int but we can
 			// cast it to an Integer and then extract the int from the Integer.
 			// But first, make sure it can be done.
-			Integer i = new Integer(0);
+			Integer i = Integer.valueOf(0);
 			if (!i.getClass().isInstance(retVal)) {
 				throw new ClassCastException();
 			}
